# vievlog

./: .env  .env.example  .gitignore  .pnp.cjs  3D_VIDEO_EFFECTS_UPGRADE.md  AUTO_VIDEO_WITH_MP3.md  DEV.md  DEV.mdx  NEXTJS_INTEGRATION_UPDATE.md  POCKETBASE_SETUP.md  PROJECT_RESTRUCTURE_PLAN.md  README.md  RUST_INTEGRATION.md  SMOOTH_VIDEO_UPGRADE.md  convertToJson.js  convert_md_to_mdx.sh  edge.ts  eslint.config.js  grammar.ts  index.html  index1.html  index2.html  index3.html  list-grammar-advanced.md  list-grammar.md  main.html_bk  main.ts_bk  mdx-components.tsx  middleware.ts  next.config.js  next.config.ts  package-lock.json  package.json  test-markdown.md  test-search-fix.html  test-search-results.html  test.html  tsconfig.json  tw1.txt  vercel.json
backup/lessions/: page.tsx
cpp-wasm/: CMakeLists.txt  build.sh  math_utils.cpp
cpp-wasm/src/: bindings.cpp
cpp-wasm/src/algorithms/: dynamic_programming.cpp  dynamic_programming.h  graph_algorithms.cpp  graph_algorithms.h  searching.cpp  searching.h  sorting.cpp  sorting.h
cpp-wasm/src/data_structures/: arrays.cpp  arrays.h  graphs.cpp  graphs.h  hash_tables.cpp  hash_tables.h  heaps.cpp  heaps.h  linked_lists.cpp  linked_lists.h  queues.cpp  queues.h  stacks.cpp  stacks.h  trees.cpp  trees.h
data/: topik-data.json  topik-session.json
docs/: architecture.md  error.txt
pocketbase-docker/: docker-compose.yml
public/_pagefind/: pagefind-entry.json
public/avatars/: alex.avif  taylor.avif
public/games/: index.audio.worklet.js  index.html
public/games/unhaunter/: CHANGELOG.md  index.html
public/godot-game/: index.html
public/home/: photo-1494790108377-be9c29b29330.avif
public/locales/af/: common.json
public/locales/am/: common.json
public/locales/ar/: common.json
public/locales/az/: common.json
public/locales/bg/: common.json
rust-wasm/: Cargo.toml
rust-wasm/pkg/: README.md  README.mdx  package.json  vievlog_rust.d.ts  vievlog_rust.js  vievlog_rust_bg.js  vievlog_rust_bg.wasm  vievlog_rust_bg.wasm.d.ts
rust-wasm/src/: bevy_effects_manager.rs  bevy_image_processor.rs  bevy_video_generator.rs  data_structures.rs  lib.rs
rust-wasm/src/algorithms/: dynamic_programming.rs  graph_algorithms.rs  mod.rs  searching.rs  sorting.rs
rust-wasm/src/api/: basic.rs  color_grading.rs  data_processing.rs  gpu_video_generation.rs  gpu_video_generation_fixed.rs  gpu_video_simple.rs  image_processing.rs  mod.rs  models.rs  performance.rs  smart_enhancement.rs  smooth_video_generation.rs  text_analysis.rs  ultra_smooth_transitions.rs  utils.rs  video_generation.rs  wgpu_renderer.rs
rust-wasm/src/data_structures/: arrays.rs  graphs.rs  hash_tables.rs  heaps.rs  linked_lists.rs  mod.rs  queues.rs  stacks.rs  trees.rs
rust-wasm/src/graphics/: lyon_animations.rs  mod.rs
rust-wasm/src/shaders/: 3d_flip.wgsl  bokeh.wgsl  crossfade.wgsl  film_grain.wgsl  light_leak.wgsl  parallax.wgsl
script-search/: build-search.cjs
src-tauri/: 2  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: arguments.rs  bin.rs  lib.rs
src/app/: globals.css  i18n.ts  layout.tsx  markdown.css  not-found.tsx  page.tsx
src/app/(main)/: i18n.ts  (+6 more)
src/components/: DocumentRenderer.tsx  InteractiveComponents.tsx  MarkdownWrapper.tsx  MermaidLiveEditor.tsx  mdx-components.tsx
src/constants/: mockData.ts
src/content/: _meta.ts  get-started.mdx  index.mdx  tailwind-test.mdx
src/game/: EnemyBot.ts  OnlinePlayer.ts  Player.ts  QuestionDatabase.ts  QuestionUI.ts  Scene1.ts  Scene2.ts  ScoreSystem.ts  gameConfig.ts
src/lib/: SocketServer.ts  actions.ts  api.ts  auth-client_v2.ts  auth.ts  authClient.ts  comments.ts  cpp-wasm-loader.ts  flowService.ts  game.ts  index.ts  mdx-templates.ts  multilingual.ts  pocketbase.ts  redis.ts  rust-wasm-helper.ts  types.ts  utils.ts  wasm-data-structures.ts  wasm-loader.ts
src/styles/: docs.css  globals.css
src/utils/: multilingual.ts  ratingUtils.tsx  serverI18n.ts  starUtils.tsx  textUtils.tsx  videoUtils.ts
src/wasm/: package.json  vievlog_rust.d.ts
vn/: list-grammar-beginner.md  list-grammar-intermediate.md
(+747 files in other folders)
