[package]
name = "vievlog-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"

# Optional: for console logging from Rust
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]