[package]
name = "vievlog-rust"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WASM bindings
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "Element",
    "HtmlCanvasElement",
    "ImageData",
    "Window",
    "Document",
    "console",
] }
js-sys = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"

# Bevy engine (latest version with WASM support)
bevy = { version = "0.16", default-features = false, features = [
    # Core features needed for WASM
    "bevy_asset",
    "bevy_core_pipeline", 
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    
    # Image format support
    "png",
    "jpeg", 
    "webp",
    
    # WASM specific
    "webgl2",
] }

# Base64 encoding for image output  
base64 = "0.22"

# Random generation (WASM compatible)
getrandom = { version = "0.2", features = ["js"] }

# Utilities
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen-futures = "0.4"

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Optimize for size for WASM
opt-level = "s"
lto = true